arches_3d/arches_3d/media/css/nav.css
#navbar-container .navbar-header {
    float: none;
}

.nav-integrated {
    position: relative;
    left: none;
    right: none;
    margin-left: 50px;
    margin-left: 50px;
}

.navbar {
    padding: 0px !important;
    margin-bottom: 0px;
}

.nav-main-container {
    width: 100%;
}

.navbar-brand {
    float: left;
    height: auto;
    z-index: unset;
}

.navbar-logo {
    width: 50px;
    height: 50px
}

.navbar-collapse {
    float: left;
}

.nav-integrated-container .navbar-logo {
    width: 25px;
    height: 25px
}

.nav-integrated-container .navbar-brand {
    font-size: 1.25rem;
}

.g-py-10 {
    padding-top: 0px !important;
    padding-bottom: 0px !important;
}

.g-pt-5--lg {
    padding-top: 0px !important;
}

.nav-link {
    padding-top: 0px !important;
    padding-bottom: 0px !important;
    margin-top: auto;
    margin-bottom: auto;
}

.nav-item a {
    padding-top: 0px !important;
    padding-bottom: 0px !important;
}

#js-header {
    border-bottom: 1px solid #ddd;
}

@media screen and (min-width: 768px) {
    .nav-container .container {
        overflow: auto;
        display: flex;
    }
}

@media screen and (max-width: 768px) {
    .nav-main-container {
        padding: 10px;
    }
    .navbar {
        margin-top: 0px;
        padding: 0px;
    }
    .nav-item {
        padding: 5px;
    }
    #content-container {
        padding-top: 0px !important;
    }
}

